@@ -88,6 +88,7 @@ public class ZollernGalaxyCore {
 		ZGHelper.Log("Beginning Initialization phase...");
 		ZGTabs.init();
 		ZGRecipeRegistry.init();
+		ZGSpaceStations.registerSpaceStationRecipes();
 		ZGHandlers.init();
 		
 		for (BiomeGenBaseGC biome : ZGBiomes.biomeList) {
