@@ -1,9 +1,15 @@
 package zollerngalaxy.lib.helpers;
 
+import java.util.HashMap;
+import micdoodle8.mods.galacticraft.api.GalacticraftRegistry;
+import micdoodle8.mods.galacticraft.api.recipe.CircuitFabricatorRecipes;
 import micdoodle8.mods.galacticraft.api.recipe.CompressorRecipes;
+import micdoodle8.mods.galacticraft.api.recipe.SpaceStationRecipe;
+import micdoodle8.mods.galacticraft.api.world.SpaceStationType;
 import net.minecraft.init.Items;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.NonNullList;
 import net.minecraftforge.fml.common.registry.GameRegistry;
 import zollerngalaxy.lib.helpers.json.JSONRecipeFactory;
 
@@ -53,5 +59,22 @@ public class ZGRecipeHelper {
 		} else if (toolType.equals("sword")) {
 			ZGRecipeHelper.addRecipe(itemOutput, new Object[] { " R ", " R ", " S ", 'R', itemIngot, 'S', Items.STICK });
 		}
+	}
+	
+	public static void addSpaceStationRecipe(int spaceStationID, int planetID, HashMap<Object, Integer> obj) {
+		GalacticraftRegistry
+				.registerSpaceStation(new SpaceStationType(spaceStationID, planetID, new SpaceStationRecipe(obj)));
+	}
+	
+	public static void addCompresssorShapelessRecipe(ItemStack output, Object... inputs) {
+		CompressorRecipes.addShapelessRecipe(output, inputs);
+	}
+	
+	public static void addCompresssorRecipe(ItemStack output, Object... inputs) {
+		CompressorRecipes.addRecipe(output, inputs);
+	}
+	
+	public static void addCircuitFabricatorRecipe(ItemStack output, NonNullList<Object> inputs) {
+		CircuitFabricatorRecipes.addRecipe(output, inputs);
 	}
 }
